# khiva

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG  CHANGES.rst  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  README.md  REAMDE.md  bitbucket-pipelines.yml  codecov.yml  conanfile.txt
.CI/appveyor/: lookAF.bat
.CI/travis/: build.sh  build_and_test.sh  build_linux.sh  build_osx.sh  codecov.sh  coveralls.sh  install-arrayfire.sh  install-arrayfire_linux.sh  install-arrayfire_osx.sh  install-cmake.sh  install-cmake_linux.sh  install-intel.sh  install.sh  install_linux.sh  install_osx.sh  run.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
benchmarks/: .gitignore  CMakeLists.txt  README.md  clusteringBench.cpp  dimensionalityBench.cpp  distancesBench.cpp  example.cpp  featuresBench.cpp  featuresbench.cpp  fftvsconvolve.cpp  fftvsconvolveBench.cpp  khivaBenchmark.h  linalgBench.cpp  matrixBench.cpp  matrixbench.cpp  movsum.cpp  movsumBench.cpp  normalizationBench.cpp  normalizationbench.cpp  polynomialBench.cpp  regressionBench.cpp  regressionbench.cpp  regularizationBench.cpp  scampBench.cpp  statisticsBench.cpp  statisticsbench.cpp  tsaBenchmark.h  tsabenchmark.h
bindings/: CMakeLists.txt
bindings/c/: CMakeLists.txt
bindings/c/include/: khiva_c.h  tsa_c.h
bindings/c/include/khiva_c/: array.h  clustering.h  defines.h  dimensionality.h  distances.h  features.h  library.h  linalg.h  matrix.h  normalization.h  polynomial.h  regression.h  regularization.h  statistics.h  util.h
bindings/c/include/khiva_c/internal/: util.h
bindings/c/include/tsa_c/: array.h  defines.h  dimensionality.h  distances.h  features.h  library.h  linalg.h  matrix.h  normalization.h  polynomial.h  regression.h  regularization.h  statistics.h
bindings/c/src/: array.cpp  clustering.cpp  dimensionality.cpp  distances.cpp  features.cpp  library.cpp  linalg.cpp  matrix.cpp  normalization.cpp  polynomial.cpp  regression.cpp  regularization.cpp  statistics.cpp  util.cpp
bindings/jni/: CMakeLists.txt  libtsa_jni.dylib
bindings/jni/include/: khiva_jni.h  tsa_jni.h
bindings/jni/include/khiva_jni/: array.h  clustering.h  defines.h  dimensionality.h  distances.h  features.h  library.h  linalg.h  matrix.h  normalization.h  polynomial.h  regression.h  regularization.h  statistics.h  util.h
bindings/jni/include/khiva_jni/internal/: jni_traits.h  util.h  utils.h
bindings/jni/include/tsa_jni/: array.h  dimensionality.h  distances.h  features.h  library.h  linalg.h  matrix.h  normalization.h  polynomial.h  regression.h  regularization.h  statistics.h
bindings/jni/src/: array.cpp  clustering.cpp  dimensionality.cpp  distances.cpp  features.cpp  library.cpp  linalg.cpp  matrix.cpp  normalization.cpp  polynomial.cpp  regression.cpp  regularization.cpp  statistics.cpp  util.cpp
bindings/jni/test/: CMakeLists.txt
cmake/: CPackConfig.cmake  CodeCoverage.cmake  ConfigGBench.cmake  ConfigGTest.cmake  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  FindBenchmark.cmake  FindDot.cmake  FindSphinx.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  KhivaConfig.cmake.in  KhivaConfigVersion.cmake.in  KhivaInstallDirs.cmake  KhivaVersion.cmake  TSAConfig.cmake.in  TSAConfigVersion.cmake.in  TSAInstallDirs.cmake  Version.cmake
cmake/nsis/: NSIS.definitions.nsh.in  NSIS.template.in
cmake/osx_install/: distribution.dist  readme.html.in  welcome.html.in
doc/: CMakeLists.txt  conf.py.in  index.rst
doc/doxygen/: Doxyfile.in
doc/markdown/: CONTRIBUTING.md  INSTALLATION.md
doc/sphinx/: make.bat
doc/sphinx/source/: authors.rst  changes.rst  cmake.rst  conf.py  conf.py.in  faq.rst  gettingStarted.rst  index.rst  license.rst  requirements.txt
doc/sphinx/source/api/: array.rst  clustering.rst  dimensionality.rst  distances.rst  features.rst  library.rst  linalg.rst  main.rst  matrix.rst  modules.rst  normalization.rst  polynomial.rst  regression.rst  regularization.rst  statistics.rst
doc/sphinx/source/benchmarks/: main.rst
doc/sphinx/source/bindings/: main.rst
doc/sphinx/source/cluster/: main.rst
doc/sphinx/source/css/: custom.css
doc/sphinx/source/examples/: main.rst
doc/sphinx/source/parallel/: main.rst
doc/sphinx/source/text/: data_formats.rst  faq.rst  how_to_contribute.rst  list_of_algos.rst  quick_start.rst
docker/cuda/: Dockerfile  docker-build.sh  fix_queue.patch  fix_sparse.patch
docker/opencl/: Dockerfile  docker-build.sh  fix_sort.patch
examples/: CMakeLists.txt  matrixExample.cpp  normalizationExample.cpp
experiments/: CMakeLists.txt  time_handling.cpp
include/: khiva.h  tsa.h  version.h.in
include/khiva/: array.h  clustering.h  defines.h  dimensionality.h  (+12 more)
licenses/: ArrayFire License.txt  MPL2 License.txt
src/: CMakeLists.txt  dimensionality.cpp  distances.cpp  features.cpp  matrix.cpp  normalization.cpp  regression.cpp  simplification.cpp  statistics.cpp  version.cpp
src/khiva/: array.cpp  clustering.cpp  dimensionality.cpp  distances.cpp  features.cpp  library.cpp  libraryInternal.cpp  libraryInternal.h  linalg.cpp  matrix.cpp  matrixInternal.cpp  matrixInternal.h  normalization.cpp  polynomial.cpp  regression.cpp  regularization.cpp  statistics.cpp  util.cpp  vector.h  vectorUtil.h  version.cpp
src/scamp/: CMakeLists.txt
src/tsa/: array.cpp  dimensionality.cpp  distances.cpp  features.cpp  library.cpp  linalg.cpp  matrix.cpp  normalization.cpp  polynomial.cpp  regression.cpp  regularization.cpp  simplification.cpp  statistics.cpp  version.cpp
test/: CMakeLists.txt  README.md  arrayTest.cpp  clusteringTest.cpp  dimensionalityTest.cpp  distancesTest.cpp  featuresTest.cpp  khivaTest.h  libraryTest.cpp  linalgTest.cpp  matrixTest.cpp  normalizationTest.cpp  polynomialTest.cpp  regressionTest.cpp  regularizationTest.cpp  simple.cpp  simplificationTest.cpp  statisticsTest.cpp  tsaTest.h  tsatest.h  vectorTest.cpp  versionTest.cpp  versionTest.cpp.in
tools/: benchmark_plots.py  install.bat
(+19 files in other folders)
