CMAKE_MINIMUM_REQUIRED(VERSION 3.9.6)
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(TSALIB_INC "${TSALIB_BASE_DIR}/include")
SET(TSA_INSTALL_LIB_DIR "/usr/local/lib")


# build bindings for c and jni
ADD_SUBDIRECTORY(c)
ADD_SUBDIRECTORY(jni)

# Install bindings
# C binding
INSTALL(FILES ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/lib${TSALIB}_c.${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}.dylib
        DESTINATION ${TSA_INSTALL_LIB_DIR}
)
INSTALL(FILES ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/lib${TSALIB}_c.${VERSION_MAJOR}.dylib
        DESTINATION ${TSA_INSTALL_LIB_DIR}
)
INSTALL(FILES ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/lib${TSALIB}_c.dylib
        DESTINATION ${TSA_INSTALL_LIB_DIR}
)
# JNI binding
INSTALL(FILES ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/lib${TSALIB}_jni.${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}.dylib
        DESTINATION ${TSA_INSTALL_LIB_DIR}
)
INSTALL(FILES ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/lib${TSALIB}_jni.${VERSION_MAJOR}.dylib
        DESTINATION ${TSA_INSTALL_LIB_DIR}
)
INSTALL(FILES ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/lib${TSALIB}_jni.dylib
        DESTINATION ${TSA_INSTALL_LIB_DIR}
)