CMAKE_MINIMUM_REQUIRED(VERSION 3.9.6)
PROJECT(TSALIB_TEST)

FILE(GLOB_RECURSE ALL_EXAMPLE_CPP *.cpp)

FOREACH(ONE_EXAMPLE_CPP ${ALL_EXAMPLE_CPP})
    GET_FILENAME_COMPONENT(ONE_EXAMPLE_EXEC ${ONE_EXAMPLE_CPP} NAME_WE)
    SET(TARGET_NAME ${ONE_EXAMPLE_EXEC})
    ADD_EXECUTABLE(${TARGET_NAME} ${ONE_EXAMPLE_CPP})

    TARGET_LINK_LIBRARIES(${TARGET_NAME} ${TSALIB})
ENDFOREACH()