# Copyright (c) 2018 Shapelets.io
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

CMAKE_MINIMUM_REQUIRED(VERSION 3.9.6)
PROJECT(KHIVALIB_EXAMPLES)

FILE(GLOB_RECURSE ALL_EXAMPLE_CPP *.cpp)

FOREACH(ONE_EXAMPLE_CPP ${ALL_EXAMPLE_CPP})
    GET_FILENAME_COMPONENT(ONE_EXAMPLE_EXEC ${ONE_EXAMPLE_CPP} NAME_WE)
    SET(TARGET_NAME ${ONE_EXAMPLE_EXEC})
    ADD_EXECUTABLE(${TARGET_NAME} ${ONE_EXAMPLE_CPP})

    TARGET_LINK_LIBRARIES(${TARGET_NAME} ${KHIVALIB})
ENDFOREACH()

INSTALL(DIRECTORY ${KHIVALIB_BASE_DIR}/examples/
    DESTINATION ${KHIVA_INSTALL_EXAMPLE_DIR}
    COMPONENT examples
    FILES_MATCHING
    PATTERN "*.cpp"
    PATTERN "*.h")
